# ai-proxy-inspector

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT_HANDOFF.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  dns.rs  ip.rs  media.rs  mod.rs  report.rs  risk.rs  score.rs  speed.rs  webrtc.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs
src-tauri/src/scoring/: calculator.rs
src-tauri/src/services/: dns_resolver.rs  http.rs  ip_api.rs  mod.rs  speed_test.rs
src/components/ai/: AIServicePanel.tsx
src/components/dashboard/: Dashboard.tsx  ScoreGauge.tsx
src/components/dns/: DNSCheckCard.tsx
src/components/ip/: IPInfoCard.tsx  IPMap.tsx
src/components/layout/: Header.tsx  LanguageSwitcher.tsx  Layout.tsx  Sidebar.tsx
src/components/media/: MediaPanel.tsx
src/components/report/: ReportPanel.tsx
src/components/risk/: RiskPanel.tsx
src/components/speed/: SpeedTestPanel.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx  table.tsx  tabs.tsx
src/components/webrtc/: WebRTCCheckCard.tsx
src/hooks/: useIPInfo.ts  useTauriInvoke.ts
src/i18n/: index.ts
src/lib/: tauri.ts  utils.ts
src/locales/: en-US.json  zh-CN.json
src/types/: index.ts
